--- a/SWB4/swbp/nbproject/project.properties
+++ b/SWB4/swbp/nbproject/project.properties
@@ -1,6 +1,5 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=true
-annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 build.classes.dir=${build.web.dir}/WEB-INF/classes
@@ -26,12 +25,14 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.commons-jexl-2.0.1.jar=../swb/lib/commons-jexl-2.0.1.jar
 file.reference.fr.opensagres.xdocreport.converter.jar=libext/fr.opensagres.xdocreport.converter.jar
 file.reference.fr.opensagres.xdocreport.core.jar=libext/fr.opensagres.xdocreport.core.jar
 file.reference.fr.opensagres.xdocreport.document.docx.jar=libext/fr.opensagres.xdocreport.document.docx.jar
 file.reference.fr.opensagres.xdocreport.document.jar=libext/fr.opensagres.xdocreport.document.jar
 file.reference.fr.opensagres.xdocreport.template.jar=libext/fr.opensagres.xdocreport.template.jar
 file.reference.fr.opensagres.xdocreport.template.velocity.jar=libext/fr.opensagres.xdocreport.template.velocity.jar
+file.reference.jxls-core-1.0-RC-3.jar=../swb/lib/jxls-core-1.0-RC-3.jar
 file.reference.oro.jar=libext/oro.jar
 file.reference.proys-SWB4=..
 file.reference.swbp-src=src
@@ -58,7 +59,9 @@ javac.classpath=\
     ${reference.SWBBase.jar}:\
     ${reference.SWBModel.jar}:\
     ${reference.SWBPlatform.jar}:\
-    ${reference.SWBPortal.jar}
+    ${reference.SWBPortal.jar}:\
+    ${file.reference.commons-jexl-2.0.1.jar}:\
+    ${file.reference.jxls-core-1.0-RC-3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
