--- a/SWB4/swb/nbproject/project.properties
+++ b/SWB4/swb/nbproject/project.properties
@@ -96,8 +96,8 @@ file.reference.mysql-connector-java-5.0.3-bin.jar=lib/mysql-connector-java-5.0.3
 file.reference.ojdbc14-10.2.0.4.jar=lib/ojdbc14-10.2.0.4.jar
 file.reference.openrdf-sesame-2.3.0-onejar.jar=lib_bigdata/openrdf-sesame-2.3.0-onejar.jar
 file.reference.PDFBox-0.7.3.jar=lib/PDFBox-0.7.3.jar
-file.reference.poi-3.5-FINAL-20090928.jar=lib\\poi-3.5-FINAL-20090928.jar
-file.reference.poi-ooxml-3.5-FINAL-20090928.jar=lib\\poi-ooxml-3.5-FINAL-20090928.jar
+file.reference.poi-3.7-20101029.jar=lib/poi-3.7-20101029.jar
+file.reference.poi-ooxml-3.7-20101029.jar=lib/poi-ooxml-3.7-20101029.jar
 file.reference.poi-scratchpad-3.5-FINAL-20090928.jar=lib/poi-scratchpad-3.5-FINAL-20090928.jar
 file.reference.quercus.jar=lib/quercus.jar
 file.reference.resin-util.jar=lib/resin-util.jar
@@ -210,9 +210,9 @@ javac.classpath=\
     ${file.reference.facebook-java-api-3.0.0-SNAPSHOT.jar}:\
     ${file.reference.facebook-java-api-schema-3.0.0-SNAPSHOT.jar}:\
     ${file.reference.twitter4j-2.0.9.jar}:\
-    ${file.reference.poi-3.5-FINAL-20090928.jar}:\
-    ${file.reference.poi-ooxml-3.5-FINAL-20090928.jar}:\
     ${file.reference.xmlbeans-2.3.0.jar}:\
+    ${file.reference.poi-3.7-20101029.jar}:\
+    ${file.reference.poi-ooxml-3.7-20101029.jar}:\
     ${file.reference.poi-scratchpad-3.5-FINAL-20090928.jar}:\
     ${reference.SWBTOWB3Compatibility.jar}:\
     ${file.reference.antlrworks-1.4.jar}:\
