--- a/SWB4/swb/SWBPortal/src/org/semanticwb/portal/admin/resources/SWBASchedule.properties
+++ b/SWB4/swb/SWBPortal/src/org/semanticwb/portal/admin/resources/SWBASchedule.properties
@@ -1,10 +1,10 @@
 # Sample ResourceBundle properties file
 
-frmScheduleTitle=Periodos de calendarizaci\u00F3n asignados
+frmScheduleTitle=Periodos de calendarizaci\u00f3n asignados
 
-frmNewRule=Nueva calendarizaci\u00F3n
+frmNewRule=Nueva calendarizaci\u00f3n
 
-frmSchedule=Usar calendarizaci\u00F3n
+frmSchedule=Usar calendarizaci\u00f3n
 
 frmTitle=T&iacute;tulo:
 
@@ -38,7 +38,7 @@ frmSaturday=S&aacute;bado
 
 frmMonthly=Mensual
 
-frmTheDay=El d&iacute;a
+frmTheDay=Del d&iacute;a
 
 frmOfEvery=de cada
 
@@ -102,27 +102,28 @@ frmYears=a&ntilde;os
 
 btnSend=Guardar
 
-jsHourAlert=La hora debe ser un n\u00FAmero entre 0 y 23.
+jsHourAlert=La hora debe ser un n\u00famero entre 0 y 23.
 
 jsNotAMPM=No se requiere indicar AM o PM.
 
-jsMinutes=Los minutos deben ser un n\u00FAmero entre 00 y 59.
+jsMinutes=Los minutos deben ser un n\u00famero entre 00 y 59.
 
-jsSeconds=Los minutos deben ser un n\u00FAmero entre 00 y 59.
+jsSeconds=Los minutos deben ser un n\u00famero entre 00 y 59.
 
-jsBadFormat=No es un formato de hora v\u00E1lido. Los formatos v\u00E1lidos son 0:00, 0:00:00.
+jsBadFormat=No es un formato de hora v\u00e1lido. Los formatos v\u00e1lidos son 0:00, 0:00:00.
 
-jsEmptyField=El campo no puede estar vac\u00EDo.
+jsEmptyField=El campo no puede estar vac\u00edo.
 
-frmColTitle=T\u00EDtulo
+frmColTitle=T\u00edtulo
 
 frmColRemove=Eliminar
 
 keyJSCalendar=calendar.js
 btn_addnew=Agregar nuevo
-th_action=Acci\u00F3n
-confirm_remove=\u00BFEst\u00E1s seguro de querer eliminar esta calendarizacion
+th_action=Acci\u00f3n
+confirm_remove=\u00bfEst\u00e1s seguro de querer eliminar esta calendarizacion
 statmsg1=Se agrego correctamente la calendarizacion.
 statmsg2=Se actualizo correctamente la calendarizacion.
-statmsg3=Se actualizo correctamente el estatus de la calendarizaci\u00F3n.
+statmsg3=Se actualizo correctamente el estatus de la calendarizaci\u00f3n.
 statmsg4=Se elimino calendarizacion.
+frmTheDayTo=al
