--- a/SWB4/swb/SWBPortal/src/org/semanticwb/portal/resources/sem/AudioPodCast.properties
+++ b/SWB4/swb/SWBPortal/src/org/semanticwb/portal/resources/sem/AudioPodCast.properties
@@ -4,3 +4,7 @@ seemore=Ver m\u00e1s
 by=Por
 anonymous=An\u00f3nimo
 like=Me gusta
+latest=M\u00e1s recientes
+previous=Anteriores
+format=formato
+duration=Duraci\u00f3n
