--- a/swbproys/cptm/CPTMModel/nbproject/project.properties
+++ b/swbproys/cptm/CPTMModel/nbproject/project.properties
@@ -36,6 +36,7 @@ file.reference.jena-2.6.3.jar-1=D:\\webbuilder\\SWB4\\swb\\lib\\jena-2.6.3.jar
 file.reference.jena-2.6.3.jar-2=C:\\webbuilder\\SWB4\\swb\\lib\\jena-2.6.3.jar
 file.reference.json.jar=D:\\webbuilder\\SWB4\\swb\\lib\\json.jar
 file.reference.json.jar-1=C:\\webbuilder\\SWB4\\swb\\lib\\json.jar
+file.reference.servlet-api.jar=C:\\webbuilder\\SWB4\\swb\\lib\\servlet-api.jar
 file.reference.servlet.jar=D:\\webbuilder\\SWB4\\swb\\lib\\servlet.jar
 file.reference.servlet.jar-1=C:\\webbuilder\\SWB4\\swb\\lib\\servlet.jar
 includes=**
@@ -57,7 +58,8 @@ javac.classpath=\
     ${file.reference.jena-2.6.3.jar-2}:\
     ${file.reference.servlet.jar-1}:\
     ${file.reference.json.jar-1}:\
-    ${file.reference.arthurdo.jar-1}
+    ${file.reference.arthurdo.jar-1}:\
+    ${file.reference.servlet-api.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
