--- a/SWB4/swb/nbproject/project.properties
+++ b/SWB4/swb/nbproject/project.properties
@@ -121,8 +121,13 @@ includes=**
 j2ee.compile.on.save=false
 j2ee.deploy.on.save=false
 j2ee.platform=1.5
-j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-3.6.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-util.jar
-j2ee.server.type=Tomcat70
+j2ee.platform.classpath=${j2ee.server.home}/modules/weld-osgi-bundle.jar:${j2ee.server.home}/modules/jsf-impl.jar:${j2ee.server.middleware}/mq/lib/jaxm-api.jar:${j2ee.server.home}/modules/javax.resource.jar:${j2ee.server.home}/modules/endorsed/javax.annotation.jar:${j2ee.server.home}/modules/endorsed/jaxb-api-osgi.jar:${j2ee.server.home}/modules/jaxb-osgi.jar:${j2ee.server.home}/modules/javax.management.j2ee.jar:${j2ee.server.home}/modules/javax.servlet.jsp.jar:${j2ee.server.home}/modules/javax.servlet.jsp.jstl.jar:${j2ee.server.home}/modules/javax.security.auth.message.jar:${j2ee.server.home}/modules/javax.jms.jar:${j2ee.server.home}/modules/javax.persistence.jar:${j2ee.server.home}/modules/javax.security.jacc.jar:${j2ee.server.home}/modules/endorsed/webservices-api-osgi.jar:${j2ee.server.home}/modules/javax.enterprise.deploy.jar:${j2ee.server.home}/modules/webservices-osgi.jar:${j2ee.server.home}/modules/javax.ejb.jar:${j2ee.server.home}/modules/javax.mail.jar:${j2ee.server.home}/modules/jsf-api.jar:${j2ee.server.home}/modules/bean-validator.jar:${j2ee.server.home}/modules/javax.servlet.jar:${j2ee.server.home}/modules/javax.transaction.jar:${j2ee.server.home}/modules/jersey-core.jar:${j2ee.server.home}/modules/jstl-impl.jar
+j2ee.platform.embeddableejb.classpath=${j2ee.server.home}/lib/embedded/glassfish-embedded-static-shell.jar
+j2ee.platform.wscompile.classpath=${j2ee.server.home}/modules/webservices-osgi.jar
+j2ee.platform.wsgen.classpath=${j2ee.server.home}/modules/webservices-osgi.jar:${j2ee.server.home}/modules/endorsed/webservices-api-osgi.jar:${j2ee.server.home}/modules/jaxb-osgi.jar:${j2ee.server.home}/modules/endorsed/jaxb-api-osgi.jar:${j2ee.server.home}/modules/javax.ejb.jar
+j2ee.platform.wsimport.classpath=${j2ee.server.home}/modules/webservices-osgi.jar:${j2ee.server.home}/modules/endorsed/webservices-api-osgi.jar:${j2ee.server.home}/modules/jaxb-osgi.jar:${j2ee.server.home}/modules/endorsed/jaxb-api-osgi.jar:${j2ee.server.home}/modules/javax.ejb.jar
+j2ee.platform.wsit.classpath=
+j2ee.server.type=gfv3ee6
 jar.compress=true
 javac.classpath=\
     ${reference.SWBBase.jar}:\
@@ -236,7 +241,8 @@ javac.classpath=\
     ${reference.SWBBigDataInt.jar}:\
     ${reference.SWBTripleStoreMongo.jar}:\
     ${file.reference.mongo-2.7.0.jar}:\
-    ${file.reference.commons-pool-1.5.6.jar}
+    ${file.reference.commons-pool-1.5.6.jar}:\
+    ${reference.SWBWebdav.jar}
     ${file.reference.facebook-java-api-3.0.0-SNAPSHOT.jar}:\
     ${file.reference.facebook-java-api-schema-3.0.0-SNAPSHOT.jar}
 # Space-separated list of extra javac options
@@ -292,6 +298,7 @@ project.SWBSIP=SWBSIP
 project.SWBTOWB3Compatibility=WB3Compatibility
 project.SWBTripleStore=SWBTripleStore
 project.SWBTripleStoreMongo=SWBTripleStoreMongo
+project.SWBWebdav=SWBWebdav
 project.SWBXMLRPCCommon=../Client/XMLRPCCommon
 project.SWBXMRPCServer=../Client/XMRPCServer
 reference.SWB3Resources.jar=${project.SWB3Resources}/dist/SWB3Resources.jar
@@ -315,6 +322,7 @@ reference.SWBSIP.jar=${project.SWBSIP}/dist/SWBSIP.jar
 reference.SWBTOWB3Compatibility.jar=${project.SWBTOWB3Compatibility}/dist/SWBTOWB3Compatibility.jar
 reference.SWBTripleStore.jar=${project.SWBTripleStore}/dist/SWBTripleStore.jar
 reference.SWBTripleStoreMongo.jar=${project.SWBTripleStoreMongo}/dist/SWBTripleStoreMongo.jar
+reference.SWBWebdav.jar=${project.SWBWebdav}/dist/SWBWebdav.jar
 reference.SWBXMLRPCCommon.jar=${project.SWBXMLRPCCommon}/dist/SWBXMLRPCCommon.jar
 reference.SWBXMRPCServer.jar=${project.SWBXMRPCServer}/dist/SWBXMRPCServer.jar
 resource.dir=setup
