--- a/swbproys/Eworkplace/nbproject/project.properties
+++ b/swbproys/Eworkplace/nbproject/project.properties
@@ -28,6 +28,7 @@ endorsed.classpath=
 excludes=
 file.reference.commons-fileupload-1.2.1.jar=lib\\commons-fileupload-1.2.1.jar
 file.reference.jena-2.6.3.jar=lib\\jena-2.6.3.jar
+file.reference.json.jar=../../SWB4/swb/lib/json.jar
 file.reference.servlet.jar=lib\\servlet.jar
 includes=**
 jar.compress=false
@@ -39,7 +40,8 @@ javac.classpath=\
     ${file.reference.servlet.jar}:\
     ${file.reference.jena-2.6.3.jar}:\
     ${reference.SWBCommunity.jar}:\
-    ${file.reference.commons-fileupload-1.2.1.jar}
+    ${file.reference.commons-fileupload-1.2.1.jar}:\
+    ${file.reference.json.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
